--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ header_logo: other/lf-energy-standards-and-specifications/horizontal/white/lf-en
 theme_color_1: add8e6
 theme_color_2: add8e6 
 favicon: assets/img/favicon.png
-github_repo: https://github.com/lf-energy-standards-and-specifications/artwork
+github_repo: https://github.com/lfess/artwork
 trademark_text: Use of any trademark or logo is subject to the trademark policy available at <a href="https://www.linuxfoundation.org/trademark-usage">https://www.linuxfoundation.org/trademark-usage</a> with the key excepts available at <a href="LICENSE.md">LICENSE.md</a>. Questions? Please email <a href="mailto:info@lfess.energy">info@lfess.energy</a>. 
 logo_categories: 
   - Working Groups
